assets/css/style-768.css
@media screen and (min-width: 768px) {
  header {
    padding: 24px 150px;
    height: 24px;
  }

  a.nav-menu {
    display: none;
  }

  ul.nav-menu {
    display: flex;
    gap: 32px;
    list-style: none;
  }

  ul.nav-menu li a {
    font-family: 'Inter', sans-serif;
    font-weight: 600;
    font-size: 15px;
    line-height: 20px;
    color: #fff;
  }

  #headline {
    flex-direction: row;
    align-items: center;
    justify-content: flex-start;
    gap: 87px;
    background-image: url(../images/headline-background-desktop.png);
    background-position: right;
    background-repeat: no-repeat;
    background-size: auto 100%;
  }

  footer .social-medias {
    justify-content: center;
    margin-top: 0;
  }

  #headline .social-medias {
    flex-direction: column;
    order: 0;
  }

  #presentation-block {
    width: 39%;
    order: 1;
  }

  #recent-works {
    padding: 130px 142px;
  }

  #recent-works > div:first-child {
    display: flex;
    flex-direction: row;
    align-self: stretch;
    align-items: center;
    gap: 24px;
    padding-bottom: 114px;
  }

  hr {
    margin-bottom: 0;
  }

  button {
    transition: background-color 100ms;
  }

  button:hover {
    background-color: #d38248;
  }

  .project-card-1 {
    display: grid;
    column-gap: 1em;
    grid-template-columns: 3fr 2fr;
    grid-template-areas:
      "img title"
      "img content"
      "img tags"
      "img button";
  }

  .project-card-1 img {
    width: 100%;
    aspect-ratio: auto;
    transition: scale 500ms;
  }

  .project-card-1 img:hover {
    scale: 1.1;
  }

  .project-card-1 button {
    width: 15em;
  }

  .project-card-1 h1 {
    font-size: 1.5em;
    line-height: 1.5em;
    margin-top: 0;
    color: #091e42;
  }

  .project-card-1 p {
    margin: 0;
  }

  #projects-grid {
    display: grid;
    grid-template-columns: 1fr 1fr;
    gap: 5%;
  }

  .project-card {
    transition: scale 500ms;
  }

  .project-card:hover {
    scale: 1.1;
  }

  .project-card button {
    visibility: hidden;
  }

  .project-card:hover button {
    visibility: visible;
  }

  #resume-block {
    flex-direction: column;
    align-items: flex-start;
    background: url(../images/about-background-desktop.png);
    background-position: right;
    background-repeat: no-repeat;
    padding: 130px 142px;
  }

  footer p {
    font-size: 40px;
    line-height: 52px;
    text-align: start;
  }

  #resume-block p {
    width: 50%;
  }

  #skills-block {
    flex-direction: row;
    justify-content: space-evenly;
    padding: 130px 0;
  }

  #skills-block ul {
    justify-content: center;
    padding-left: 0;
  }

  footer {
    display: grid;
    gap: 24px;
    grid-template-columns: 1fr 1fr;
    padding: 130px 142px 0 142px;
    grid-template-areas:
      "foot-p form"
      "hr hr"
      "socials socials";
  }

  form {
    width: 100%;
    height: 100%;
  }

  .error-label {
    font-size: 18px;
  }

  button[type="submit"] {
    align-self: flex-start;
  }
}

